feat(Race): 우승자 추출 메소드 추가
- 최대 전진 위치를 가져오는 메소드를 추가하였습니다.
- 최대 전진 위치를 바탕으로 우승자 리스트를 반환하는 메소드를 추가하였습니다.